[gd_scene load_steps=8 format=3 uid="uid://by7j4iutullnw"]

[ext_resource type="Script" uid="uid://dk7jh1t0ksq5j" path="res://components/ui_components/dialogue_overlay/dialogue_overlay.gd" id="1_nfr8a"]
[ext_resource type="FontFile" uid="uid://df0q7rc81s0bu" path="res://common/fonts/kaushan_script.ttf" id="2_nfr8a"]
[ext_resource type="StyleBox" uid="uid://bud50rkm8v14f" path="res://common/styles/horizontal_nine_patch.tres" id="2_xv0ki"]
[ext_resource type="StyleBox" uid="uid://uribf4upf68k" path="res://common/styles/box_nine_patch.tres" id="4_xv0ki"]
[ext_resource type="PackedScene" uid="uid://jylldslf8ft6" path="res://components/ui_components/typed_label/typed_label.tscn" id="5_xv0ki"]
[ext_resource type="PackedScene" uid="uid://ctc4suo7iwk1o" path="res://components/ui_components/dialogue_overlay/next_prompt/next_prompt.tscn" id="6_xv0ki"]

[sub_resource type="FontVariation" id="FontVariation_nfr8a"]
base_font = ExtResource("2_nfr8a")
spacing_glyph = 3

[node name="DialogueOverlay" type="CanvasLayer"]
script = ExtResource("1_nfr8a")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 30

[node name="DialogueContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Spacer" type="Control" parent="MarginContainer/DialogueContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="DialogueBoxContainer" type="VBoxContainer" parent="MarginContainer/DialogueContainer"]
layout_mode = 2
theme_override_constants/separation = -70

[node name="TitleBoxContainer" type="PanelContainer" parent="MarginContainer/DialogueContainer/DialogueBoxContainer"]
self_modulate = Color(0.301961, 0.607843, 0.901961, 1)
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("2_xv0ki")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DialogueContainer/DialogueBoxContainer/TitleBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = -8

[node name="TitleLabel" type="Label" parent="MarginContainer/DialogueContainer/DialogueBoxContainer/TitleBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_nfr8a")
theme_override_font_sizes/font_size = 42
text = "The Scientist"
horizontal_alignment = 1
uppercase = true

[node name="TextBoxContainer" type="PanelContainer" parent="MarginContainer/DialogueContainer/DialogueBoxContainer"]
self_modulate = Color(0.301961, 0.607843, 0.901961, 1)
custom_minimum_size = Vector2(1600, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("4_xv0ki")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DialogueContainer/DialogueBoxContainer/TextBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="DialogueLabel" parent="MarginContainer/DialogueContainer/DialogueBoxContainer/TextBoxContainer/MarginContainer" instance=ExtResource("5_xv0ki")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DialogueContainer"]
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/DialogueContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NextPrompt" parent="MarginContainer/DialogueContainer/VBoxContainer" instance=ExtResource("6_xv0ki")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="finished" from="MarginContainer/DialogueContainer/DialogueBoxContainer/TextBoxContainer/MarginContainer/DialogueLabel" to="." method="_on_dialogue_label_finished"]
